319 - Fix the links not showing on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1013,7 +1013,9 @@ a.header__link {
     left: 0;
   }
 
-  .featured-card .header__category-item:first-of-type {
+  .featured-card .header__category-item:first-of-type,
+  .featured-card-double .header__category-item:first-of-type,
+  .featured-card-double .header__category-item:nth-of-type(2) {
     display: none;
   }
 
